modifiche delle logiche nel backend, per la gestione degli utenti andandoli a filtrare per ruolo, più modifiche al ticketService per la creazione di un ticket da parte un utente con ruolo != USER. Aggiornate anche le componenti del frontend relative alla new-ticket e al draft-edit.
