# frontend/ticketing_app_ui/src/openapi/openapi.json
@@ -1471,6 +1471,89 @@
         }
       }
     },
+    "/api/v1/users/by-role": {
+      "get": {
+        "tags": [
+          "User Management"
+        ],
+        "summary": "Recupera la lista di utenti per ruolo",
+        "description": "Fornisce una lista di utenti filtrata per il ruolo specificato.",
+        "operationId": "getUsersByRole",
+        "parameters": [
+          {
+            "name": "roleName",
+            "in": "query",
+            "description": "Nome del ruolo da filtrare (es. 'USER')",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "enum": [
+                "ADMIN",
+                "HELPER_JUNIOR",
+                "HELPER_SENIOR",
+                "PM",
+                "USER"
+              ]
+            },
+            "example": "USER"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Non autenticato.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/UserDTO"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Ruolo non valido.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/UserDTO"
+                  }
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Lista recuperata con successo.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/UserDTO"
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Non autorizzato.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/UserDTO"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/tickets/my-tickets-and-associated": {
       "get": {
         "tags": [
@@ -2106,15 +2189,15 @@
           "pageable": {
             "$ref": "#/components/schemas/PageableObject"
           },
+          "numberOfElements": {
+            "type": "integer",
+            "format": "int32"
+          },
           "first": {
             "type": "boolean"
           },
           "last": {
             "type": "boolean"
-          },
-          "numberOfElements": {
-            "type": "integer",
-            "format": "int32"
           },
           "size": {
             "type": "integer",
@@ -2144,12 +2227,6 @@
       "PageableObject": {
         "type": "object",
         "properties": {
-          "unpaged": {
-            "type": "boolean"
-          },
-          "paged": {
-            "type": "boolean"
-          },
           "pageNumber": {
             "type": "integer",
             "format": "int32"
@@ -2157,6 +2234,12 @@
           "pageSize": {
             "type": "integer",
             "format": "int32"
+          },
+          "paged": {
+            "type": "boolean"
+          },
+          "unpaged": {
+            "type": "boolean"
           },
           "offset": {
             "type": "integer",
